2004-11-18  Thomas Klausner <wiz@danbala.tuwien.ac.at>

	* zip.h: Rename zip_get_error to zip_error_get;
	rename zip_file_get_error to zip_file_error_get;
	rename zip_error_str to zip_error_to_str;
	replace various zip_add_* and zip_replace_* functions
	with zip_source_*.  Adapt users.  Update docs.

2004-11-17  Thomas Klausner <wiz@danbala.tuwien.ac.at>

	* zip.h: Rename ZERR_* to ZIP_ER_*; rename ZIP_ET_ZIP to
	ZIP_ET_ZLIB; remove ZIP_CH_ISCOMP from zip.h.  Adapt users.

2004-04-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_replace_zip.c (_zip_replace_zip): set ZIP_CH_ISCOMP when
	copying compressed data.

	* lib/zip_fclose.c (zip_fclose): don't compare crc when reading
	compressed data.
	* lib/zip_fread.c (zip_fread): don't compute crc when reading
	compressed data.

2004-04-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_name_locate.c (zip_name_locate): honour
	ZIP_FL_UNCHANGED, handle `\' for ZIP_FL_NODIR.

	* lib/zip_stat_index.c (zip_stat_index): return ZERR_INVAL if
	ZIP_FL_UNCHANGED is specified and file was added.  Honour
	ZIP_FL_UNCHANGED for name.  If file was changed and
	ZIP_FL_UNCHANGED is not given, call ch_func with command
	ZIP_CMD_STAT.

	* lib/zip_fopen_index.c (zip_fopen_index): return ZERR_INVAL if
	ZIP_FL_UNCHANGED is specified and file was added.
	
XXX: update for no-meta rewrite

2003-12-30  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* src/zipcmp.c (compare_zip): use correct index.

2003-10-06  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_unchange_all.c (zip_unchange_all): remove check for za
	!= NULL.

	* lib/zip_set_name.c (_zip_set_name): adapt to new error code
	handling.  clean up error handling.

2003-10-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip.h, lib/zipint.h: Don't expose struct zip, struct
	zip_file.
	* lib/zip_open.c (zip_open): new argument errp, use it to store
	error code.
	* lib/zip_error_str.c (zip_error_str): new function.